# awesome-project

./: .flake8  .gitignore2  .pre-commit-config.yaml  Makefile  PRTEMPLATE.md  README.md  cookiecutter.json  mkdocs.yml  pyproject.toml
app/: __init__.py  main.py
app/api/v1/: __init__.py
app/api/v1/routers/: awesome_project.py
app/core/: __init__.py  config.py
awesome_project/: __init__.py  constants.py  decorators.py  errors.py  logger.py  schemas.py  types.py  warnings.py
awesome_project/utils/: __init__.py
demo/: awesome_project_demo.py
docs/: design_doc.md  examples.md  generate_dependencies_doc.py  index.md  model_resume.md  profiling_doc.md
docs/module_reference/: constants.md  decorators.md  errors.md  logger.md  schemas.md  types.md  warnings.md
profiling/: __init__.py  awesome_project_profiling.py  confprofiling.py
requirements/: doc.txt
tests/: __init__.py  conftest.py  test_awesome_project.py
{{cookiecutter.project_slug}}/: .gitignore  Makefile  PRTEMPLATE.md  README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/app/: __init__.py  main.py
{{cookiecutter.project_slug}}/app/api/v1/models/: base.py
{{cookiecutter.project_slug}}/app/api/v1/routers/: {{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/app/core/: __init__.py  config.py
{{cookiecutter.project_slug}}/demo/: {{cookiecutter.project_slug}}_demo.py
{{cookiecutter.project_slug}}/docs/: design_doc.md  examples.md  index.md  model_resume.md  profiling_doc.md
{{cookiecutter.project_slug}}/docs/module_reference/: constants.md  decorators.md  errors.md  logger.md  schemas.md  types.md  warnings.md
{{cookiecutter.project_slug}}/profiling/: __init__.py
{{cookiecutter.project_slug}}/requirements/: dev.txt
{{cookiecutter.project_slug}}/tests/: __init__.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  constants.py  decorators.py  errors.py  logger.py  schemas.py  types.py  warnings.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/utils/: __init__.py
