[tool.poetry]
name = "Awesome Python Project"
version = "0.1.0"
description = "Example repo for the Python Project Template usage."
authors = ["Alejandro Aguayo-Ortiz <aaguayoo92@gmail.com>"]
readme = "README.md"
packages = [{include = "awesome_project"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.8"
black = "^24.4.1"
commitizen = "^3.24.0"
coverage = "^7.5.0"
flake8 = "^7.0.0"
flake8-docstrings = "^1.7.0"
flake8-isort = "^6.1.1"
flake8-print = "^5.0.0"
flake8-typing-imports = "^1.15.0"
isort = "^5.13.2"
jupyterlab = "3.6.5"
jupyterlab-snippets = "^0.4.1"
matplotlib = "^3.8.4"
memory-profiler = "^0.61.0"
mypy = "^1.10.0"
nbconvert = "^7.16.4"
nbqa = "^1.8.5"
pre-commit = "^3.7.0"
pre-commit-hooks = "^4.6.0"
poetry-kernel = "^0.1.3"
pytest = "^8.1.1"
ruff = "^0.4.1"
streamlit = "^1.42.2"
toml = "^0.10.2"
types-psutil = "^5.9.5.20240423"

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
mike = "^2.0.0"
mkdocs = "^1.6.0"
mkdocs-autorefs = "^1.0.1"
mkdocs-exporter = "^6.0.0"
mkdocstrings = "^0.25.0"
mkdocs-material = "^9.5.19"
mkdocstrings-python = "^1.10.0"
mkdocs-print-site-plugin = "^2.5.0"
mkdocs-with-pdf = "^0.9.3"

[tool.poetry.group.api]
optional = true

[tool.poetry.group.api.dependencies]
fastapi = {extras = ["standard"], version = "^0.115.4"}
uvicorn = {extras = ["standard"], version = "^0.32.0"}

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]

[tool.bandit]
exclude_dirs = ["tests", "profiling", "app", "demo", "notebooks"]

[tool.coverage.run]
source = ["awesome_project/"]
omit = [
    'tests/',
    '/tmp/',
]

[tool.mypy]
pretty = true
no_implicit_optional = true
disable_error_code = "attr-defined"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
default_section = "THIRDPARTY"
known_third_party = []
known_first_party = ["awesome_project"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 88 # Longitud máxima de línea permitida
extend-exclude = [
    ".git"
]

[tool.ruff.lint]
select = ["B", "E", "F", "T", "W", "I", "ANN001", "D"]
ignore = ["B008", "D401", "D406", "D407", "D417"] # Lista de códigos a ignorar
fixable = [
    "ALL",
] # Permite correcciones automáticas para todas las reglas habilitadas
unfixable = [] # Lista de códigos que no deben corregirse automáticamente
exclude = [
    ".git",
    "env",
    "templates",
    "app",
] # Directorios excluidos del análisis de linting

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
